<resources>
    <string name="app_name">Location Tracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_denied_location">Location access  required</string>
    <string name="permission_denied_camera">Permission required to access camera</string>
    <string name="permission_denied_storage">Read write permission required</string>
    <string name="notifications">Notifications</string>
    <string name="track_friends">Track Friends</string>
    <string name="tracking_you">Friends Tracking You</string>
    <string name="share">Share</string>

    <string name="find_friends">Find Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_friend">Add friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="allow">Allow</string>
    <string name="disallow">Disallow</string>
    <string name="friend_request"> wants to be your friend.</string>
    <string name="friend_request_pending">Requested</string>
    <string name="my_fiends">My Friends</string>
    <string name="request_from">request_from</string>
    <string name="friends_requests_received">friends_requests_received</string>
    <string name="friends_requests_sent">friends_requests_sent</string>

    <string name="users">users</string>
   <!-- <string name="profile_image">profile_image</string>
-->    <string name="tag">tag</string>
    <string name="name">name</string>
    <string name="friends">friends</string>
    <string name="friend">friend</string>
    <string name="users_locations">users_locations</string>
    <string name="lat">lat</string>
    <string name="lng">lng</string>
    <string name="Users">Users</string>
    <string name="description">description</string>
    <string name="user_email">user_email</string>
    <string name="phone_no">phone_no</string>
    <string name="date">date</string>
    <string name="user_profile">My Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permission are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">236874257036483</string>
    <string name="fb_login_protocol_scheme">fb236874257036483</string>
    <string name="request_to">request_to</string>
    <string name="you_tracking_user">you_tracking_user</string>
    <string name="user_tracking_me">user_tracking_me</string>
    <string name="track_to">track_to</string>

    <string name="tracked_by">tracked_by</string>
    <string name="online">online</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="user_id">user_id</string>
    <string name="friends_since">Friends Since</string>
    <string name="joined_on">Joined On</string>
    <string name="sent_on">Sent On</string>
    <string name="tracking_since">Tracking Since</string>
    <string name="privacy_url">By registering,you agree to our <a href="https://firebasestorage.googleapis.com/v0/b/locationtracker-5d7ca.appspot.com/o/privacy_policy.html?alt=media&amp;token=f58dc9f4-cd39-4749-9ca1-a695daba648e" >Privacy Policy</a></string>
    <string name="profile">profile</string>
    <string name="png">.png</string>
    <string name="date_format">dd-MM-yyyy (HH:mm:ss)</string>
    <string name="rate">Rate</string>
    <string name="tutorial">Follow below steps to start tracking your friends.\n\nStep 1:Go to \"Find Friends\" and send friend request to your friend(s).\n\nStep 2:Once your friend accepts your friend request from his/her \"Notification\" then you have to go to \"Track Friends\" and start tracking.\n\nNote:Your friend needs to keep this app open so his/her name could apppear in \"Track Friends\" list</string>
    <string name="help">Help</string>
    <string name="admob_app_id">ca-app-pub-1211635675454735~4806294656</string>
    <string name="version_code">version_code</string>
    <string name="system_generated">system_generated</string>
</resources>
